[workspace]
members = ["rgrow", "rgrow-gui", "py-rgrow", "rgrow-ipc"]
default-members = ["rgrow", "rgrow-gui", "rgrow-ipc"]
resolver = "2"

[workspace.dependencies]
ndarray = {version = "^0.16", features = ["serde"]}
rand = {version = "^0.9", features = ["small_rng"]}
serde = {version = "^1.0.185", features=["derive", "rc"]}
pyo3 = {version = "^0.26", features = ["extension-module", "multiple-pymethods"]}
rayon = { version = "1" }
numpy = "^0.26"
approx = "^0.5"
pyo3-polars = "^0.25"
polars = {version = "^0.52", features = ["lazy", "parquet", "product", "timezones"]}

[workspace.package]
version = "0.21.1"
authors = ["Constantine Evans <const@costi.net>"]
edition = "2021"
repository = "https://github.com/cgevans/rgrow"
license = "BSD-3-Clause"
categories = ["science", "simulation"]
