[workspace]
members = ["rgrow-rust", "rgrow-python"]
default-members = ["rgrow-rust"]
resolver = "2"

[workspace.dependencies]
ndarray = {version = "^0.17", features = ["serde", "approx", "rayon"]}
rand = {version = "^0.9", features = ["small_rng"]}
serde = {version = "^1.0.185", features=["derive", "rc"]}
pyo3 = {version = "^0.27", features = ["extension-module", "multiple-pymethods"]}
rayon = { version = "1" }
numpy = "^0.27.1"
approx = "^0.5"
pyo3-polars = "^0.26"
polars = {version = "^0.53", features = ["lazy", "parquet", "product", "timezones"]}

[workspace.package]
version = "0.22.0"
authors = ["Constantine Evans <const@costi.net>"]
edition = "2021"
repository = "https://github.com/cgevans/rgrow"
license = "BSD-3-Clause"
categories = ["science", "simulation"]

# Optimized build with debug symbols for profiling (samply, perf, flamegraph)
[profile.profiling]
inherits = "release"
debug = true
