[project]
name = "rgrow"
dependencies = [
    "numpy ~= 2.0",
    "attrs ~= 23.2",
    "matplotlib ~= 3.9",
    "typing_extensions",
    "tqdm",
    "pyyaml",
    "platformdirs",
    "rgrow-gui",
    "patchelf>=0.17.2.4",
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "pytest",
    "hypothesis",
]

[tool.uv.sources]
rgrow-gui = { workspace = true }

[build-system]
requires = ["maturin~=1.10"]
build-backend = "maturin"


[tool.maturin]
bindings = "pyo3"
profile = "release"
manifest-path = "py-rgrow/Cargo.toml"
python-source = "py-rgrow"


[tool.uv.workspace]
members = [".", "rgrow-gui"]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "pytest~=9.0",
    "hypothesis",
    "pytest-cov",
]

[tool.pytest]
minversion = "9.0"
testpaths = ["py-rgrow/tests"]
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
