[project]
name = "rgrow"
dependencies = [
    "numpy ~= 2.0",
    "attrs ~= 23.2",
    "matplotlib ~= 3.9",
    "typing_extensions",
    "tqdm",
    "pyyaml",
    "platformdirs",
    "patchelf>=0.17.2.4",
    "rgrow-cli",
]
requires-python = ">=3.10"
dynamic = ["version"]


[build-system]
requires = ["maturin~=1.10"]
build-backend = "maturin"


[tool.maturin]
bindings = "pyo3"
profile = "release"
manifest-path = "rgrow-python/Cargo.toml"
python-source = "rgrow-python"


[tool.uv.sources]
rgrow-cli = { workspace = true }

[tool.uv.workspace]
members = [".", "rgrow-cli"]

[dependency-groups]
testing = [
    "pytest",
    "hypothesis",
]
docs = [
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings[python]",
    "mkdocs-bibtex",
]
dev = [
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "pytest~=9.0",
    "hypothesis",
    "pytest-cov",
    "maturin>=1.11.2",
]

[tool.pytest]
minversion = "9.0"
testpaths = ["rgrow-python/tests"]
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
