[package]
name = "pyrgrow"
description = "Python interface to rgrow."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }


[features]
default = ["use_rayon"] # , "ui"]         # "ui"
use_rayon = ["rgrow/use_rayon", "rayon"]
ui = ["rgrow/ui"]

[lib]
name = "rgrow"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bincode = "^1"
indent = "0.1.1"
serde = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
numpy = { workspace = true }
rayon = { version = "1", optional = true }
polars = {workspace = true}
pyo3-polars = {workspace = true}

[dependencies.rgrow]
path = "../rgrow"
features = ["python", "use_rayon"]
default-features = false

[dependencies.pyo3]
workspace = true
features = ["extension-module", "abi3-py310"]
