[project]
name = "rgrow"
dependencies = ["numpy ~= 1.26", "attrs ~= 23.2", "matplotlib ~= 3.8.2", "typing_extensions", "tqdm"]
requires-python = ">=3.9"

[project.optional-dependencies]

testing = [
    "pytest",
    "hypothesis"
]

[build-system]
requires = ["maturin~=1.4"]
build-backend = "maturin"

[tool.pytest.ini_options]
norecursedirs = [
    "dist",
    "build",
    ".tox"]
testpaths = ["tests"]