[project]
name = "rgrow"
dependencies = ["numpy ~= 2.0", "attrs ~= 23.2", "matplotlib ~= 3.9", "typing_extensions", "tqdm", "pyyaml", "platformdirs"]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]

testing = [
    "pytest",
    "hypothesis"
]

[build-system]
requires = ["maturin~=1.4"]
build-backend = "maturin"

[tool.pytest.ini_options]
norecursedirs = [
    "dist",
    "build",
    ".tox"]
testpaths = ["tests"]

[tool.maturin]
bindings = "pyo3"
profile = "release"