[project]
name = "rgrow-cli"
description = "Command-line interface for rgrow tile assembly simulator"
requires-python = ">=3.10"
dynamic = ["version"]

[build-system]
requires = ["maturin~=1.10"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "../rgrow-rust/Cargo.toml"
profile = "release"
