[package]
name = "rgrow-gui"
description = "GUI subprocess client for rgrow"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
name = "rgrow_gui"
path = "src/lib.rs"

[[bin]]
name = "rgrow-gui"
path = "src/main.rs"

[dependencies]
rgrow = { path = "../rgrow" }
iced = { version = "0.13", features = ["wgpu", "image", "tokio"] }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
image = "0.25"
memmap2 = "0.9"
serde = { workspace = true }

[dev-dependencies]
iced_test = "0.0.0"

