[package]
name = "rgrow"
description = "A modular Tile Assembly Model simulator, inspired by Xgrow."
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
default-run = "rgrow"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "^0.6", features = ["html_reports"] }

[[bench]]
name = "sierpinski"
harness = false

[[bench]]
name = "committer"
harness = false

[[bench]]
name = "canvas_bounds"
harness = false

# [[bench]]
# name = "ratestore"
# harness = false

# [[bench]]
# name = "ui"
# harness = false

[lib]
name = "rgrow"
path = "src/lib.rs"
#crate_type = ["rlib", "cdylib"]

[[bin]]
name = "rgrow"
path = "src/main.rs"

[features]
python = ["pyo3", "numpy", "pyo3-polars", "polars"]
polars = ["dep:polars"]
gui = ["dep:iced", "dep:tokio", "dep:image"]
default = ["gui"]

[dependencies]
num-format = "0.4"
fnv = "1.0"
bimap = "0.6"
serde_yaml = "0.9"
serde_json = "1"
serde = { workspace = true }
bincode = "1.3"
memmap2 = "0.9"
phf = { version = "^0", features = ["macros"] }
nom = { version = "7", optional = false }
# winit = { version = "^0", optional = true }
# winit_input_helper = {version = "^0", optional = true}
# winit-modular = {version = "^0", optional = true}
rayon = { workspace = true }
thiserror = "2"
anyhow = "1"
numpy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
rand = { workspace = true }
ndarray = { workspace = true }
enum_dispatch = "0.3"
polars = { workspace = true, optional = true }
pyo3-polars = {workspace = true, optional = true}
approx = { workspace = true }
astro-float = "0.9.4"
paste="1.0.15"
bpci = "0.1.0"
iced = { version = "0.13", features = ["wgpu", "image", "tokio"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
image = { version = "0.25", optional = true }

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"
winapi = { version = "0.3", features = ["namedpipeapi"] }

[dependencies.clap]
version = "4"
features = ["derive","cargo"]


[dependencies.cached]
version = "^0.55"
default-features = false

[dependencies.num-traits]
version = "^0.2"

[dependencies.which]
version = "6"

[package.metadata.docs.rs]
no-default-features = true
features = ["python"]
