[package]
name = "rgrow"
description = "A modular Tile Assembly Model simulator, inspired by Xgrow."
readme = "README.md"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sierpinski"
harness = false

[[bench]]
name = "ratestore"
harness = false

[[bench]]
name = "ui"
harness = false

[lib]
name = "rgrow"
path = "src/lib.rs"
#crate_type = ["rlib", "cdylib"]

[[bin]]
name = "rgrow"
path = "src/main.rs"

[features]
default = ["ui", "use_rayon"]
ui = ["fltk", "pixels"]
use_rayon = ["rayon"]
python = ["pyo3", "numpy"]

[dependencies]
fltk = { version = "=1.3.10", features = ["raw-window-handle"], optional=true }
num-format = "0.4.0"
fnv = "1.0"
bimap = "0.5"
serde_yaml = "0.8"
serde_json = "1"
serde = { workspace=true }
pixels = { version = "^0.10", optional = true}
phf = { version = "^0", features = ["macros"] }
nom = { version = "5.1", optional = false }
winit = { version = "^0", optional = true }
winit_input_helper = {version = "^0", optional = true}
winit-modular = {version = "^0", optional = true}
rayon = {version = "1.4", optional = true}
thiserror = "1"
anyhow = "1"
numpy = {workspace=true, optional = true}
pyo3 = {workspace=true, optional = true}
rand = {workspace=true}
ndarray = {workspace=true}

[dependencies.clap]
version = "4"
features = ["derive"]


[dependencies.cached]
version = "0.18"
default-features = false

[dependencies.num-traits]
version = "0.2"

