[package]
name = "rgrow"
description = "A modular Tile Assembly Model simulator, inspired by Xgrow."
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sierpinski"
harness = false

# [[bench]]
# name = "ratestore"
# harness = false

# [[bench]]
# name = "ui"
# harness = false

[lib]
name = "rgrow"
path = "src/lib.rs"
#crate_type = ["rlib", "cdylib"]

[[bin]]
name = "rgrow"
path = "src/main.rs"

[features]
default = ["use_rayon", "ui"]
ui = ["fltk", "pixels"]
use_rayon = ["rayon"]
python = ["pyo3", "numpy"]

[dependencies]
fltk = { version = "^1.4", features = [
    "rwh05",
    "fltk-bundled",
], optional = true }
num-format = "0.4"
fnv = "1.0"
bimap = "0.6"
serde_yaml = "0.9"
serde_json = "1"
serde = { workspace = true }
pixels = { version = "^0.13", optional = true }
phf = { version = "^0", features = ["macros"] }
nom = { version = "7", optional = false }
# winit = { version = "^0", optional = true }
# winit_input_helper = {version = "^0", optional = true}
# winit-modular = {version = "^0", optional = true}
rayon = { workspace = true, optional = true }
thiserror = "1"
anyhow = "1"
numpy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true, features = ["experimental-declarative-modules"] }
rand = { workspace = true }
ndarray = { workspace = true }
enum_dispatch = "0.3"
polars = { workspace = true }
pyo3-polars = {workspace = true}
approx = { workspace = true }
bincode = "1"
astro-float = "0.9.4"

[dependencies.clap]
version = "4"
features = ["derive"]


[dependencies.cached]
version = "0.18"
default-features = false

[dependencies.num-traits]
version = "0.2"

[package.metadata.docs.rs]
no-default-features = true
features = ["use_rayon", "python"]
